--- a/styles/login.css
+++ b/styles/login.css
@@ -58,3 +58,8 @@ h6 { font-size: 10px; line-height: 18px; }
 .login-signup a:hover{
 	color: #666666;
 }
+
+.form-control:focus{
+	border: 1px solid #000000;
+	box-shadow: 0px 0px 0px 0.2px #000000;
+}
