--- a/styles/dangky.css
+++ b/styles/dangky.css
@@ -5,3 +5,42 @@ html, body{
 	overflow-x: hidden;
 	box-sizing: border-box;
 }
+.dky-ui{
+	align-content: center;
+	justify-content: center;
+	padding-top: 30px;
+	padding-bottom: 10px;
+}
+.icon{
+	width: 15%;
+	height: 15%;
+	margin-bottom: 20px;
+	
+}
+.dky-form{
+	padding: 20px;
+}
+.dky-header{
+	text-align: center;
+}
+.dky-header h3{
+	font-weight: 600;
+	text-transform: uppercase;
+}
+.dky-btn{
+	background-color: #000000;
+	color: #FFFFFF;
+	text-transform: uppercase;
+	padding: 10px 5px;
+	text-align: center;
+	border: solid 1px;
+	width: 100%;
+}
+.dky-form a{
+	text-decoration: none;
+	color: #000000;
+	font-weight: 600;
+}
+.dky-form a:hover{
+	color: #666666;
+}
