--- a/styles/dangky.css
+++ b/styles/dangky.css
@@ -36,6 +36,7 @@ html, body{
 	border: solid 1px;
 	width: 100%;
 }
+
 .dky-form a{
 	text-decoration: none;
 	color: #000000;
@@ -44,3 +45,20 @@ html, body{
 .dky-form a:hover{
 	color: #666666;
 }
+
+.form-control:focus {
+	border: 1px solid #000000;
+	box-shadow: 0px 0px 0px 0.2px #000000;
+}
+
+.form-check-input:checked {
+	background-color: #000000;
+	border-color: #000000;
+	box-shadow: 0px 0px 5px 0.2px #666666;
+}
+
+.form-check-input:focus {
+	border-color: #000000;
+	box-shadow: 0px 0px 5px 2px #666666;
+}
+
