--- a/styles/login.css
+++ b/styles/login.css
@@ -1,43 +1,74 @@
-html, body{
+html, body {
 	font-family: 'Quicksand', sans-serif;
-	line-height:1.4;
+	line-height: 1.4;
 	font-size: 14px;
 	overflow-x: hidden;
 	box-sizing: border-box;
 }
-h1,h2,h3,h4,h5,h6 {margin:0 0 13px 0;  font-weight:500;}
-h1 { font-size: 36px; }
-h2 { font-size: 28px;}   
-h3 { font-size: 24px;}
-h4 { font-size: 13px; line-height: 18px; }
-h5 { font-size: 12px; line-height: 18px; }
-h6 { font-size: 10px; line-height: 18px; }
-.login-ui{
+
+h1, h2, h3, h4, h5, h6 {
+	margin: 0 0 13px 0;
+	font-weight: 500;
+}
+
+h1 {
+	font-size: 36px;
+}
+
+h2 {
+	font-size: 28px;
+}
+
+h3 {
+	font-size: 24px;
+}
+
+h4 {
+	font-size: 13px;
+	line-height: 18px;
+}
+
+h5 {
+	font-size: 12px;
+	line-height: 18px;
+}
+
+h6 {
+	font-size: 10px;
+	line-height: 18px;
+}
+
+.login-ui {
 	align-content: center;
 	justify-content: center;
 	padding-top: 30px;
 	padding-bottom: 10px;
 }
-.icon{
+
+.icon {
 	width: 20%;
 	height: 20%;
 	margin-bottom: 20px;
-	
 }
-.login-form{
+
+.login-form {
 	padding: 20px;
 }
-.login-form input:focus{
+
+.login-form input:focus {
 	color: #000000;
 }
-.login-header{
+
+.login-header {
 	text-align: center;
 }
-.login-header h3{
+
+.login-header h3 {
 	font-weight: 600;
 	text-transform: uppercase;
 }
-.login-btn{
+
+.login-btn {
 	background-color: #000000;
 	color: #FFFFFF;
 	text-transform: uppercase;
@@ -46,20 +77,36 @@ h6 { font-size: 10px; line-height: 18px; }
 	border: solid 1px;
 	width: 100%;
 }
-.login-signup{
+
+.login-signup {
 	text-align: center;
 }
-.login-signup a{
+
+.login-signup a {
 	text-decoration: none;
 	color: #000000;
 	font-weight: 600;
-
 }
-.login-signup a:hover{
+
+.login-signup a:hover {
 	color: #666666;
 }
 
-.form-control:focus{
+.form-control:focus {
 	border: 1px solid #000000;
 	box-shadow: 0px 0px 0px 0.2px #000000;
 }
+
+.form-check-input:checked {
+	background-color: #000000;
+	border-color: #000000;
+	box-shadow: 0px 0px 5px 0.2px #666666;
+}
+
+.form-check-input:focus {
+	border-color: #000000;
+	box-shadow: 0px 0px 5px 2px #666666;
+}
+
+
+
