--- a/styles/dangky.css
+++ b/styles/dangky.css
@@ -18,7 +18,7 @@ html, body{
 	
 }
 .dky-form{
-	padding: 20px;
+	padding: 20px 20px 0 20px;
 }
 .dky-header{
 	text-align: center;
@@ -58,7 +58,9 @@ html, body{
 }
 
 .form-check-input:focus {
-	border-color: #000000;
+	border-color: #666666;
 	box-shadow: 0px 0px 5px 2px #666666;
 }
-
+.dky-login{
+	text-align: center;
+}
