--- a/styles/login.css
+++ b/styles/login.css
@@ -39,6 +39,8 @@ h6 {
 }
 
 .login-ui {
+	box-shadow: 0px 0px 1px 1px #666666;
+	background:  #FFFFFF;
 	align-content: center;
 	justify-content: center;
 	padding-top: 30px;
@@ -67,17 +69,6 @@ h6 {
 	font-weight: 600;
 	text-transform: uppercase;
 }
-
-.login-btn {
-	background-color: #000000;
-	color: #FFFFFF;
-	text-transform: uppercase;
-	padding: 10px 5px;
-	text-align: center;
-	border: solid 1px;
-	width: 100%;
-}
-
 .login-signup {
 	text-align: center;
 }
@@ -117,5 +108,38 @@ h6 {
 	color: #666666;
 }
 
+.login-btn{
+	width: 100%;
+	color: #FFFFFF;
+	text-align: center;
+	text-transform: uppercase;
+  	padding: 10px;
+  	font-weight: 500;
+  	transition: all 0.5s ease;
+  	position: relative;
+
+	background: #000000;
+  	border: 1px solid;
+  	z-index: 1;
+}
+.login-btn:after {
+  	position: absolute;
+  	content: "";
+  	width: 0;
+  	height: 100%;
+  	top: 0;
+  	right: 0;
+  	z-index: -1;
+  	background-color: #FFFFFF;
+  	transition: all 0.5s ease;
+}
+.login-btn:hover{
+  	color: #000000;
+	border:1px solid #000000;
+}
+.login-btn:hover:after {
+  	left: 0;
+  	width: 100%;
+}
 
 
