--- a/public/styles/dangky.css
+++ b/public/styles/dangky.css
@@ -28,14 +28,41 @@ html, body{
 	text-transform: uppercase;
 }
 .dky-btn{
-	background-color: #000000;
-	color: #FFFFFF;
-	text-transform: uppercase;
-	padding: 10px 5px;
-	text-align: center;
-	border: solid 1px;
 	width: 100%;
+	color: #FFFFFF;
+	text-align: center;
+	text-transform: uppercase;
+  	padding: 10px;
+  	font-weight: 500;
+  	transition: all 0.5s ease;
+  	position: relative;
+
+	background: #000000;
+  	border: 0.2px solid #000000;
+  	z-index: 1;
 }
+.dky-btn:after {
+  	position: absolute;
+  	content: "";
+  	width: 0;
+  	height: 100%;
+  	top: 0;
+  	right: 0;
+  	z-index: -1;
+  	background-color: #FFFFFF;
+  	transition: all 0.5s ease;
+}
+.dky-btn:hover{
+  	color: #000000;
+	border: 0.2px solid #000000;
+	
+	
+}
+.dky-btn:hover:after {
+  	left: 0;
+  	width: 100%;
+}
+
 
 .dky-form a{
 	text-decoration: none;
