--- a/public/styles/reset.css
+++ b/public/styles/reset.css
@@ -68,14 +68,39 @@ h6 {
 	text-transform: uppercase;
 }
 
-.reset-btn {
-	background-color: #000000;
-	color: #FFFFFF;
-	text-transform: uppercase;
-	padding: 10px 5px;
-	text-align: center;
-	border: solid 1px;
+.reset-btn{
 	width: 100%;
+	color: #FFFFFF;
+	text-align: center;
+	text-transform: uppercase;
+  	padding: 10px;
+  	font-weight: 500;
+  	transition: all 0.5s ease;
+  	position: relative;
+	background: #000000;
+  	border: 0.2px solid #000000;
+  	z-index: 1;
+}
+.reset-btn:after {
+  	position: absolute;
+  	content: "";
+  	width: 0;
+  	height: 100%;
+  	top: 0;
+  	right: 0;
+  	z-index: -1;
+  	background-color: #FFFFFF;
+  	transition: all 0.5s ease;
+}
+.reset-btn:hover{
+  	color: #000000;
+	border: 0.2px solid #000000;
+	
+	
+}
+.reset-btn:hover:after {
+  	left: 0;
+  	width: 100%;
 }
 .reset-note{
 	font-size: 11px;
