--- a/public/styles/thongtinsp.css
+++ b/public/styles/thongtinsp.css
@@ -78,3 +78,13 @@ ul.list-image li  :hover .Khac{
 	top: 15%;
 	opacity: 2;
 }
+
+/* Giấu cái nhẹ */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+input[type=number] {
+	-moz-appearance: textfield;
+}
