--- a/public/styles/thongtinsp.css
+++ b/public/styles/thongtinsp.css
@@ -1,49 +1,158 @@
-.imgpro{
-	padding: 20px 10px 20px 0px;
+.small-img{
+	padding: 10px 5px;
+	max-width: 20%;
 }
-.infor{
-	padding: 20px 20px 20px 10px;
+.img-icon{
+	text-align: center;
+	margin-bottom: 20px;
 }
-ul.Loai :hover img{
-	transform: scale(1.1);
-	opacity: 0.8;
-	border-bottom: 2px solid;
+.imgpro ul{
+	align-content: center;
+	margin: 0;
+	padding: 0;
 }
-
-.size{
-	padding: 20px;	
+.pro-title{
+	text-transform: uppercase;
+	margin-top: 40px;
+	border-bottom: solid 1px #EEEEEE;
 }
-.button{
-	border: 20px;
+.pro-title h3{
+	font-weight: 700;
 }
-.introduction{
-	padding: 30px 20px 50px 10px;
-	background-color: rgb(248,249,250);
-	margin-bottom: 50px;
+.pro-price{
+	padding: 10px 0;
+	border-bottom: solid 1px #EEEEEE;
+	font-size: 18px;
+    font-weight: bold;
+}
+.pro-price del{
+	font-size: 14px;
+    color: #666666;
+    padding-left: 10px;
+    font-weight: 500;
+}
+.pro-sale{
+    padding: 5px 15px;
+    margin-right: 10px;
+    background: #EEEEEE;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+    color: #FF3D40;
+}
+.size-select{
+	display: inline-block;
+	padding: 10px 0px;
+	width: 100%;
+	border-bottom: solid 1px #EEEEEE;
 	
 }
-.introduction h2{
-	font-size: 300%;
+.size-selector{
+	position: absolute;
+    clip: rect(0,0,0,0);
+    pointer-events: none;
+    margin-right:8px;
+}
+.size-btn{
+    margin: 0;
+    background: #FFFFFF;
+    width: 40px;
+    margin-right: 5px;
+    height: 40px;
+    line-height: 40px;
+    position: relative;
+    border: 1px solid #E5E5E5;
+    font-size: 12px;
+    font-weight: 500;
+    text-align: center;
+    cursor: pointer;
+}
+.size-select input:checked + label{
+	background-color: #000000;
+	color: #FFFFFF;
+}
+.size-selector:disabled +label{
+	pointer-events: none;
+    filter: none;
+	background-color: #DDDDDD;
+	color: #FFF;
+
+}
+.quantity{
+	margin-top: 10px;
+}
+.detail-number{
+	width: 80px;
+	height: 30px;
+	border: 1px solid #F3F3F3;
+	float: left;
+}
+.minusdecrease, .plusincrease{
+	height: 30px;
+	width: 30px;
+	float: left;
+	border: 1px solid #F3F3F3;
+}
+.detail-btn{
+	font-size: 12px;
+	width: 100%;
+	line-height: 25px;
+	text-align: center;
+	text-transform: uppercase;
+  	padding: 10px;
+  	font-weight: 600;
+  	transition: all 0.5s ease;
+  	position: relative;
+  	border: 0.2px solid ;
+  	z-index: 1;
+}
+.detail-btn:after {
+  	position: absolute;
+  	content: "";
+  	width: 0;
+  	height: 100%;
+  	top: 0;
+  	right: 0;
+  	z-index: -1;
+  	background-color: #FFFFFF;
+  	transition: all 0.5s ease;
+}
+.detail-btn:hover:after {
+  	left: 0;
+  	width: 100%;
+}
+.add-btn{
+	background-color: #000000;
+	color: #FFFFFF;
+}
+.add-btn:hover{
+  	color: #000000;
+	border: 0.2px solid #000000;
+		
+}
+.buy-btn{
+	background-color: #FF0004;
+	color: #FFFFFF;
+	margin-left: 15px;
+}
+.buy-btn:hover{
+  	color: #FF2023;
+	border: 0.2px solid #FF2023;
+		
+}
+.desc{
+	margin-top: 25px;
+	font-weight: 600;
+	
+}
+.introduction h3{
 	text-transform: uppercase;
 	text-align: center;
-}
-.introduction h4{
-	font-size: 17px;
-	color: #000000;
 }
 .SimilarProduct{
 	padding-bottom: 50px;
 }
-ul{
-	list-style: none;
-}
-a{
-	text-decoration: none;
-}
-.row{
-	display: flex;
-	justify-content: center;
-}
+
 ul.list-image{
 	display: flex;
 }
