--- a/public/styles/thongtinsp.css
+++ b/public/styles/thongtinsp.css
@@ -19,19 +19,19 @@
 .pro-title h3{
 	font-weight: 700;
 }
-.pro-price{
+.detail-pro-price{
 	padding: 10px 0;
 	border-bottom: solid 1px #EEEEEE;
 	font-size: 18px;
     font-weight: bold;
 }
-.pro-price del{
+.detail-pro-price del{
 	font-size: 14px;
     color: #666666;
     padding-left: 10px;
     font-weight: 500;
 }
-.pro-sale{
+.detail-pro-sale{
     padding: 5px 15px;
     margin-right: 10px;
     background: #EEEEEE;
