--- a/public/styles/thongtinsp.css
+++ b/public/styles/thongtinsp.css
@@ -6,11 +6,6 @@
 	text-align: center;
 	margin-bottom: 20px;
 }
-.imgpro ul{
-	align-content: center;
-	margin: 0;
-	padding: 0;
-}
 .pro-title{
 	text-transform: uppercase;
 	margin-top: 40px;
@@ -146,7 +141,18 @@
 	font-weight: 600;
 	
 }
-
+.introduction h3{
+	text-align: center;
+	font-weight: 600;
+	text-transform: uppercase;
+}
+.introduction p{
+	text-align: justify;
+}
+.introduction img{
+	width: 100%;
+	
+}
 
 /* Giấu cái nhẹ */
 input::-webkit-outer-spin-button,
