--- a/public/styles/hienthitimkiem.css
+++ b/public/styles/hienthitimkiem.css
@@ -1,16 +1,34 @@
 .products{
     height: 344px;
 }
+.filter-heading{
+    text-transform: uppercase;
+    font-weight: 600;
+    text-align: center; 
+}
+.filter-select{
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    word-spacing: 2px;
+}
+.filter-brands{
+    padding: 10px 0px;
+}
 .filter-brands ul{
     display: block;
     padding: 0;
     margin-top: 15px;
+    margin-bottom: 5px;
 }
 .filter-brands ul li{
     list-style:none;
     text-transform: uppercase;
     font-size: 12px;
     font-weight: 400;
+}
+.filter-price{
+    padding-bottom: 10px;
 }
 .filter-price ul li{
     font-size: 12px;
@@ -20,6 +38,10 @@
     display: block;
     margin-top: 15px;
     padding: 0;
+    margin-bottom: 5px;
+}
+.filter-size{
+    padding-bottom: 10px;
 }
 .filter-size{
     margin-bottom: 15px;
@@ -28,7 +50,7 @@
     list-style:none;
     padding: 0;
     margin-top: 15px;
-    height: 35px;
+    height: 70px;
 }
 .filter-size li{
     float: left;
