--- a/public/styles/hienthitimkiem.css
+++ b/public/styles/hienthitimkiem.css
@@ -77,3 +77,32 @@
 .filter-control{
     cursor: pointer;   
 }
+.direction{
+    margin: 0px 20px;
+    opacity: 0.4;
+}
+.page-num{
+    opacity: 0.4;
+    margin: 0px 10px;
+}
+.direction:hover, .page-num:hover{
+    opacity: 1;
+}
+.current{
+    opacity: 1;
+}
+.direction-bar{
+    margin: 20px 0px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 600;
+}
+.form-check-input:checked {
+	background-color: #000000;
+	border-color: #000000;
+	box-shadow: 0px 0px 100px 0.2px #666666;
+}
+.form-check-input:focus {
+	border-color: #666666;
+	box-shadow: 0px 0px 50px 2px #666666;
+}
