--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -18,7 +18,7 @@ h6 { font-size: 10px; line-height: 18px; }
 	display: flex;
 	align-items: center;
 	padding: 20px;
-	z-index: 100;
+	z-index: 10;
 }
 nav{
 	text-align: right;
@@ -174,7 +174,7 @@ p.pro-price.sale{
     background: #000000;
     color: #FFFFFF;
     width: 100%;
-    padding: 8px 5px;
+    padding: 4px 5px;
     outline: none;
 }
 .pro-img:hover .pro-btn{
@@ -197,6 +197,58 @@ p.pro-price.sale{
     padding: 15px 10px;
     font-size: 13px;
 }
-	
-
-
+.searchbar{
+	background-color: #FFFFFF;
+	z-index: 11;
+	position: absolute;
+	top: 2% ;
+	height: 120px;
+	padding: 40px 54px 10px 10px;
+	width: 100%;
+	right: -1900px;
+	transition: all ease 0.5s;
+}
+.search-box{
+	border-radius: 20px;
+	height: 45px;
+	padding: 20px;
+	width: 40%;
+	border: 1px #222222 solid;
+}
+.search-btn{
+	margin-left: 5px;
+	border-radius: 40px;
+	width: 45px;	
+	position: relative;
+	z-index: 11;
+	border:1px #000000 solid;
+	background-color: #FFFFFF;
+}
+.search-btn:hover {
+	background-color: #000000;
+	color:#FFFFFF;
+	transition: all ease 0.5s;
+	border: none;
+}
+#close-bar{
+	float: right;
+	border-radius: 50px;
+	width: 40px;
+	height: 40px;
+	position: relative;
+	z-index: 11;
+	border: none;
+	background-color: #FFFFFF;
+}
+#close-bar:hover{
+	background-color: #000000;
+	color:#FFFFFF;
+	border: none;
+}
+.search-icon{
+	cursor: pointer;
+	margin-left: 10px;
+}
+.search-icon:hover{
+	color: #666666;
+}
