--- a/public/styles/thanhtoan.css
+++ b/public/styles/thanhtoan.css
@@ -169,3 +169,12 @@ display: block;
 	
 	padding-top: 20px;
 }
+.note-label{
+	display: block;
+	margin-bottom: 5px;
+	font-weight: 700;
+}
+textarea{
+	width: 50%;
+	height: 100px;
+}
