--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -160,29 +160,33 @@ p.pro-price.sale{
     visibility: hidden;
     position: absolute;
     display: flex;
-    left: 0;
+    left: 10%;
     bottom: -10%;
-    transition: all ease 0.5s;
+    transition: all ease 0.4s;
 	
 }
 .hidden-btn{
-	border-radius: 0;
-    text-transform: uppercase;
+	border-radius: 100px;
     font-weight: 500;
     font-size: 11px;
     border: 0;
-    background: #000000;
+    background: #666666;
     color: #FFFFFF;
-    width: 100%;
-    padding: 4px 5px;
+    width: auto;
+    padding: 9px 10px;
     outline: none;
 }
 .pro-img:hover .pro-btn{
 	z-index: 2;
 	visibility: visible;
 	opacity: 0.7;
-	bottom: 0;
+	left: 10%;
+	bottom: 10%;
   	width: 100%;
+}
+.pro-btn a:hover{
+	background-color: #00CED1;
+	color: #FFFFFF;
 }
 .pro-img-1{
 	position: absolute;
@@ -251,4 +255,59 @@ p.pro-price.sale{
 }
 .search-icon:hover{
 	color: #666666;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+input[type=number] {
+	-moz-appearance: textfield;
+}
+.form-control:focus {
+	border: 1px solid #000000;
+	box-shadow: 0px 0px 0px 0.2px #000000;
+}
+
+.form-check-input:checked {
+	background-color: #000000;
+	border-color: #000000;
+	box-shadow: 0px 0px 5px 0.2px #666666;
+}
+
+.form-check-input:focus {
+	border-color: #666666;
+	box-shadow: 0px 0px 5px 2px #666666;
+}
+.button{
+	width: auto;
+	color: #FFFFFF;
+	text-align: center;
+	text-transform: uppercase;
+  	font-weight: 500;
+  	transition: all 0.5s ease;
+  	position: relative;
+	background: #000000;
+  	border: 0.2px solid #000000;
+  	z-index: 1;
+}
+.button:after {
+  	position: absolute;
+  	content: "";
+  	width: 0;
+  	height: 100%;
+  	top: 0;
+  	right: 0;
+  	z-index: -1;
+  	background-color: #FFFFFF;
+  	transition: all 0.5s ease;
+}
+.button:hover{
+  	color: #000000;
+	border: 0.2px solid #000000;	
+}
+.button:hover:after {
+  	left: 0;
+  	width: 100%;
 }
