--- a/public/styles/thongtintaikhoan.css
+++ b/public/styles/thongtintaikhoan.css
@@ -11,9 +11,21 @@
   	padding: 10px 30px;
     font-size: 12px;
 }
-.selected{
-    background-color: #000000;
+.sign-out-btn{
+    text-align: left;
+    height: 100%;
+    width: 100%;
+    background-color: #FFF;
+    color:#000000;
+    border: none;
+    border-top: 1px solid;
+   
 }
-.selected a{
-    color: #FFFFFF;
+.selected{
+    text-align: left;
+    height: 100%;
+    width: 100%;
+    background-color: #000000;
+    color:#FFF;
+    border: none;
 }
