--- a/public/styles/hienthitimkiem.css
+++ b/public/styles/hienthitimkiem.css
@@ -16,7 +16,7 @@
 }
 @media only screen and (min-width: 993px){
     #filter{
-        display: block;
+        display: block !important;
     }
 }
 .filter-select{
