--- a/public/styles/dangky.css
+++ b/public/styles/dangky.css
@@ -1,4 +1,5 @@
 html, body{
+	background-image: url('../images/others/images.jpg');
 	font-family: 'Quicksand', sans-serif;
 	line-height:1.4;
 	font-size: 14px;
@@ -6,6 +7,7 @@ html, body{
 	box-sizing: border-box;
 }
 .dky-ui{
+	background-color: #FFFFFF;
 	align-content: center;
 	justify-content: center;
 	padding-top: 30px;
