--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,4 +1,5 @@
 html, body {
+	background-image: url('../images/others/images.jpg');
 	font-family: 'Quicksand', sans-serif;
 	line-height: 1.4;
 	font-size: 14px;
